css/style.css
.navbar{
	background-color:white;
	font-size: 1.25em;
	border-color: white;
	font-family: "Courier New";
	height:30%;
	top: -6vh;
}

.navtop{
	position: relative;
	top: -12vh;
}

.navbar-header{
	font-style: bold; 
	padding-top: 5vh;
	padding-left: -5vh;
}

.logo{
	height: 15%;
	width: 15%;
	position: relative;
	margin-left: 2vh;
}

.bike{
	position: relative;
	top: 23vh;
	width: 100%
}

#slogan{
	font-family: "Courier New";
	color:white;
	font-size: 3.5em;
	position: relative;
	top:-65vw;
	text-align: center;
}

#arrow{
	width:5em;
	height:5em;

}

#team{
	width: 100%
}

